initial update structure for project 1

--- a/project1/index.html
+++ b/project1/index.html
@@ -1,1 +1,47 @@
-gfvakjdfad
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+
+</head>
+
+
+<body>
+    
+
+    <h2> Describe how search engines work</h2>
+    <p>   </p>
+
+
+
+<h2>Explain the importance of keywords and descriptions as meta tags</h2>
+
+<p>   </p>
+
+
+<h2> Four Elements that comprise writing content and relevant links</h2>
+
+<ul>
+
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+
+</ul>
+
+
+<h2> what constitutes a good heading hierarchy and include one example with more than one heading tag</h2>
+<p></p>
+
+</body>
+
+
+
+
+
+
+</html>
+
