--- a/project1/index.html
+++ b/project1/index.html
@@ -11,7 +11,7 @@
 <nav>
 
 
-    
+
 </nav>
 
 
@@ -19,7 +19,9 @@
     
 
     <h2> Describe how search engines work</h2>
-    <p>   </p>
+    <p>  Seatch engines work by "crawling" the internet using bots called spiders. These spiders follow links from page to page to find new content that has yet to be indexed.
+         When using a search engine, relevant results to your search are pulled from the index
+         and then displayed in an order determined by the algorithim that partiacular search engine is using </p>
 
 
 
