--- a/project1/index.html
+++ b/project1/index.html
@@ -27,17 +27,18 @@
 
 <h2>Explain the importance of keywords and descriptions as meta tags</h2>
 
-<p>   </p>
+<p> The title tag amd the meta description tags should include keywords re;evamt to the content of the web page they describe. 
+    This helps Search Engines understand what the page is about and index the site accordingly  </p>
 
 
 <h2> Four Elements that comprise writing content and relevant links</h2>
 
 <ul>
 
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+    <li>Headline - The headline is the first piece of content that everyone sees</li>
+    <li>Write a great lead - this is the attention grabber</li>
+    <li> The body - the main content of the website</li>
+    <li>The close - bring it all together</li>
 
 </ul>
 
