--- a/project1/index.html
+++ b/project1/index.html
@@ -43,8 +43,11 @@
 </ul>
 
 
-<h2> what constitutes a good heading hierarchy and include one example with more than one heading tag</h2>
-<p></p>
+<h2> What constitutes a good heading hierarchy and include one example with more than one heading tag</h2>
+<p> A good heaing hierarchy is where you can clearly differentiate between titles ( and important content) to regular content. You also use heading hierarchy to show the reader what order to consume your content.
+    For example, the title of the page should be an h1 tag. Once you use this h1, none of the other titles on the page should be an h1 tag. Also, when styling your content, good heading hierarchy will ensure that the sizes of the tags are all clearly different. <Form>
+    For example, an h2 tag may have a size of 20px, while and h3 or an h4 tag will then be a 10px size.
+</p>
 
 </body>
 
