--- a/project1/index.html
+++ b/project1/index.html
@@ -9,8 +9,8 @@
 
 
 <nav>
- <a href="index.html"></a>   
-<a href="gallery.html"></a>
+ <a href="index.html">Home</a>   
+<a href="gallery.html">Gallery</a>
 
 
 </nav>
