--- a/project1/index.html
+++ b/project1/index.html
@@ -9,8 +9,15 @@
 
 
 <nav>
- <a href="index.html">Home</a>   
-<a href="gallery.html">Gallery</a>
+
+    <ul>
+       <li><a href="index.html">Home</a>   </li> 
+       <li><a href="gallery.html">Gallery</a></li> 
+
+
+
+    </ul>
+
 
 
 </nav>
