--- a/project1/index.html
+++ b/project1/index.html
@@ -11,7 +11,7 @@
 <nav>
 
     <ul>
-       <li><a href="index.html">Home</a>   </li> 
+       <li><a href="index.html">Home</a></li> 
        <li><a href="gallery.html">Gallery</a></li> 
 
 
@@ -35,7 +35,7 @@
 
 <h2>Explain the importance of keywords and descriptions as meta tags</h2>
 
-<p> The title tag amd the meta description tags should include keywords re;evamt to the content of the web page they describe. 
+<p> The title tag amd the meta description tags should include keywords relevant to the content of the web page they describe. 
     This helps Search Engines understand what the page is about and index the site accordingly  </p>
 
 
