major gallery update

--- a/project1/gallery.html
+++ b/project1/gallery.html
@@ -9,14 +9,36 @@
 </head>
 
 
+<nav>
+
+    <ul>
+       <li><a href="index.html">Home</a></li> 
+       <li><a href="gallery.html">Gallery</a></li> 
+
+
+
+    </ul>
+
+
+
+</nav>
 
 
 
 <body>
     
+    <div class="gallery">
 
 
-    
+<div class="picture"> <img src="images/art1.jpg" alt=""></div>
+<div class="picture"> <img src="images/art2.jpg" alt=""></div>
+<div class="picture"> <img src="images/art3.jpg" alt=""></div>
+<div class="pciture"> <img src="images/art4.jpg" alt=""></div>
+
+    </div>
+
+
+
 </body>
 
 
