--- a/project1/gallery.html
+++ b/project1/gallery.html
@@ -26,6 +26,14 @@
 
 
 <body>
+
+    <h2>Photo Gallery</h2>
+
+    <p> This gallery is made up of pictures that i took This
+        semester for my art class. I hope you enjoy my amateur photography!
+    </p>
+
+
     
     <div class="gallery">
 
