--- a/project1/gallery.html
+++ b/project1/gallery.html
@@ -31,6 +31,7 @@
 
     <p> This gallery is made up of pictures that i took This
         semester for my art class. I hope you enjoy my amateur photography!
+
     </p>
 
 
@@ -38,7 +39,7 @@
     <div class="gallery">
 
 
-<div class="picture"> <img src="images/art1.jpg" alt=""></div>
+<div class="picture"> <img src="images/art1.jpg" alt="DOF example on a can of nuts. Taken for art class by Amol Mehta"></div>
 <div class="picture"> <img src="images/art2.jpg" alt=""></div>
 <div class="picture"> <img src="images/art3.jpg" alt=""></div>
 <div class="pciture"> <img src="images/art4.jpg" alt=""></div>
