--- a/project1/gallery.html
+++ b/project1/gallery.html
@@ -40,9 +40,9 @@
 
 
 <div class="picture"> <img src="images/art1.jpg" alt="DOF example on a can of nuts. Taken for art class by Amol Mehta"></div>
-<div class="picture"> <img src="images/art2.jpg" alt=""></div>
-<div class="picture"> <img src="images/art3.jpg" alt=""></div>
-<div class="pciture"> <img src="images/art4.jpg" alt=""></div>
+<div class="picture"> <img src="images/art2.jpg" alt="Picture of the sun setting over my backyard. Taken for art class by Amol Mehta"></div>
+<div class="picture"> <img src="images/art3.jpg" alt="Picture of the Stonewall house at battlefield national park. Taken for art class by Amol Mehta"></div>
+<div class="pciture"> <img src="images/art4.jpg" alt="Another DOF example taken on a mini statue. Taken for art art class by Amol Mehta"></div>
 
     </div>
 
