--- a/project1/index.html
+++ b/project1/index.html
@@ -7,6 +7,12 @@
 
 </head>
 
+<header>
+
+<h1>CMST 386 - Project 1 - Home</h1>
+
+
+
 
 <nav>
 
@@ -22,6 +28,8 @@
 
 </nav>
 
+
+</header>
 
 <body>
     
