--- a/project1/index.html
+++ b/project1/index.html
@@ -4,6 +4,7 @@
 
 <head>
 
+    <link rel="stylesheet" href="css/stylesheet.css">
 
 </head>
 
@@ -17,7 +18,7 @@
 <nav>
 
     <ul>
-       <li><a href="index.html">Home</a></li> 
+       <li><a:active href="index.html">Home</a></li> 
        <li><a href="gallery.html">Gallery</a></li> 
 
 
@@ -31,22 +32,33 @@
 
 </header>
 
+
+
 <body>
+
+    <div class="wrapper">
     
+        <section class="text">
 
     <h2> Describe how search engines work</h2>
     <p>  Seatch engines work by "crawling" the internet using bots called spiders. These spiders follow links from page to page to find new content that has yet to be indexed.
          When using a search engine, relevant results to your search are pulled from the index
          and then displayed in an order determined by the algorithim that partiacular search engine is using </p>
+        </section>
 
+        <br>
 
-
+<section class="text">
 <h2>Explain the importance of keywords and descriptions as meta tags</h2>
 
 <p> The title tag amd the meta description tags should include keywords relevant to the content of the web page they describe. 
     This helps Search Engines understand what the page is about and index the site accordingly  </p>
 
+</section>
 
+<br>
+
+<section class="text">
 <h2> Four Elements that comprise writing content and relevant links</h2>
 
 <ul>
@@ -58,14 +70,28 @@
 
 </ul>
 
+</section>
+<br>
 
+
+<section class="text">
 <h2> What constitutes a good heading hierarchy and include one example with more than one heading tag</h2>
 <p> A good heaing hierarchy is where you can clearly differentiate between titles ( and important content) to regular content. You also use heading hierarchy to show the reader what order to consume your content.
-    For example, the title of the page should be an h1 tag. Once you use this h1, none of the other titles on the page should be an h1 tag. Also, when styling your content, good heading hierarchy will ensure that the sizes of the tags are all clearly different. <Form>
+    For example, the title of the page should be an h1 tag. Once you use this h1, none of the other titles on the page should be an h1 tag. Also, when styling your content, good heading hierarchy will ensure that the sizes of the tags are all clearly different. 
     For example, an h2 tag may have a size of 20px, while and h3 or an h4 tag will then be a 10px size.
 </p>
 
+</section>
+<br>
+
+</div>
+
 </body>
+
+<footer>
+
+<p>Designed by Amol Mehta</p>
+</footer>
 
 
 
