--- a/project1/index.html
+++ b/project1/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="css/stylesheet.css">
     <title> CMST 386 - Project 1</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
 </head>
 
 <header>
