--- a/project3/index.html
+++ b/project3/index.html
@@ -9,6 +9,88 @@
 
 </head>
 
+<header>
+
+
+    <nav>
+
+        <ul>
+            <li></li>
+            <li></li>
+            
+        </ul>
+    </nav>
+
+
+</header>
+
+
+
+<body>
+
+    <div class="wrapper">
+
+
+   
+
+<section>
+
+    <h2> Explain the importance of responsive design and its impact on the
+        target audience. 
+    </h2>
+
+    <p>
+
+    </p>
+
+
+</section>
+
+
+<section>
+
+<h2>Describe three different kinds of reports that will tell you what information
+    your target audience is accessing.
+</h2>
+
+
+<div class="flex-columns">
+
+
+<div>dfadfadf</div>
+<div>fadfadf</div>
+<div>fadfadf</div>
+
+</div>
+
+</section>
+
+
+<section id="cta">
+
+
+<h3> Want to know more?</h3>
+
+
+
+<button onclick="window.location.href='preprocessing.html'">
+     Learn preprocessing</button>
+
+</section>
+
+
+</div>
+
+</body>
+
+
+
+<footer>
+
+    <p> Designed by Amol Mehta</p>
+
+</footer>
+
 
 
 
