--- a/project3/preprocessing.html
+++ b/project3/preprocessing.html
@@ -3,5 +3,63 @@
 <html>
 
 
+<head>
+
+    <link rel="stylesheet" href="css/stylesheet.css">
+</head>
+
+
+<header>
+
+
+
+</header>
+
+
+
+
+<body>
+    
+
+    <div class="wrapper">
+
+    <section>
+
+        <h2> Explain the ways to implement preprocessing
+
+        </h2>
+
+        <p>
+
+        </p>
+
+
+    </section>
+
+    <section>
+
+<h2> Define nad describe the mechanisms useid in either LESS or SASS
+
+</h2>
+
+<p>
+
+</p>
+
+    </section>
+
+    
+
+</div>
+
+</body>
+
+
+<footer>
+
+
+
+</footer>
+
 
 </html>
