--- a/project3/index.html
+++ b/project3/index.html
@@ -41,6 +41,14 @@
 
     <p>
 
+        In the new and ever evolving mobile world, responsive design is 
+        becoming increasingly more important. With mobile phones and 
+        tablets dominating the internet these days, responsive design is becoming alsmot nessacery to run a successful business. 
+        Instead of designing and hosting two seperate websites for your consumers, using responsive design allowss
+        the company to save time and money, while also allowing their consumers 
+        to have the best user experience, whether they are
+        consuming content on a regular desktop or on their mobile devices.
+
     </p>
 
 
