--- a/project3/preprocessing.html
+++ b/project3/preprocessing.html
@@ -38,7 +38,7 @@
 
     <section>
 
-<h2> Define nad describe the mechanisms useid in either LESS or SASS
+<h2> Define and describe the mechanisms useid in either LESS or SASS
 
 </h2>
 
