--- a/project3/preprocessing.html
+++ b/project3/preprocessing.html
@@ -31,7 +31,22 @@
 
         <p>
 
+            Client-side pre-processing is intended as the task of transforming some content
+             or style file before it is actually added to the DOM.
+
         </p>
+
+        <h3> Implementation</h3>
+
+        <ul>
+
+            <li>The first step is downloading the raw (unprocessed) resource. </li>
+            <li>Then we can process and transform the raw data. </li>
+            <li> Finally the result can be added to the DOM</li>
+        </ul>
+
+        <p> These steps can be implemented with VanillaJS by making an AJAX request, the old way,
+             or by using the modern fetch method.</p>
 
 
     </section>
