major content updates

--- a/project3/index.html
+++ b/project3/index.html
@@ -65,9 +65,35 @@
 <div class="flex-columns">
 
 
-<div>dfadfadf</div>
-<div>fadfadf</div>
-<div>fadfadf</div>
+<div>
+    <h3> Mobile Overview Report</h3>
+
+    <p> The mobile overview report shows you which types of devices
+        people are using to access your website, so you can 
+        tailor your website design to your consumers.
+    </p>
+
+
+</div>
+
+
+<div>
+
+    <h3> Segments Report</h3>
+
+    <p>Another powerful Google Analytics SEO Report is the Segmentation Report that tells you Organic traffic information. In Segment Mode, the combined data is divided by different dimensions, such as age, gender, location, income, and much more to analyze patterns.
+          The Segments can help you identify which key factors are escalating the business outcomes.</p>
+
+
+</div>
+<div>
+
+<h3> Landing Pages Report</h3>
+
+<p> The Landing Page Google Analytics SEO Report shows you which content or pages people are viewing first when they open your website, whereas the Exit Rate tells you which content isn’t engaging the audience. 
+    In this way, you can change or improve that content to make it impressive.   </p>
+
+</div>
 
 </div>
 
