--- a/project3/preprocessing.html
+++ b/project3/preprocessing.html
@@ -53,7 +53,7 @@
 
     <section>
 
-<h2> Define and describe the mechanisms useid in either LESS or SASS
+<h2> Define and describe the mechanisms used in either LESS or SASS
 
 </h2>
 
