added class overwhite for white background with black text

--- a/project3/index.html
+++ b/project3/index.html
@@ -15,8 +15,8 @@
     <nav>
 
         <ul>
-            <li>Home</li>
-            <li></li>
+            <li class="overwhite">Home</li>
+            <li class="overwhite"></li>
             
         </ul>
     </nav>
@@ -66,9 +66,9 @@
 
 
 <div>
-    <h3> Mobile Overview Report</h3>
+    <h3 class="overwhite"> Mobile Overview Report</h3>
 
-    <p> The mobile overview report shows you which types of devices
+    <p class="overwhite"> The mobile overview report shows you which types of devices
         people are using to access your website, so you can 
         tailor your website design to your consumers.
     </p>
@@ -79,18 +79,18 @@
 
 <div>
 
-    <h3> Segments Report</h3>
+    <h3 class="overwhite"> Segments Report</h3>
 
-    <p>Another powerful Google Analytics SEO Report is the Segmentation Report that tells you Organic traffic information. In Segment Mode, the combined data is divided by different dimensions, such as age, gender, location, income, and much more to analyze patterns.
+    <p class="overwhite">Another powerful Google Analytics SEO Report is the Segmentation Report that tells you Organic traffic information. In Segment Mode, the combined data is divided by different dimensions, such as age, gender, location, income, and much more to analyze patterns.
           The Segments can help you identify which key factors are escalating the business outcomes.</p>
 
 
 </div>
 <div>
 
-<h3> Landing Pages Report</h3>
+<h3 class="overwhite"> Landing Pages Report</h3>
 
-<p> The Landing Page Google Analytics SEO Report shows you which content or pages people are viewing first when they open your website, whereas the Exit Rate tells you which content isn’t engaging the audience. 
+<p class="overwhite"> The Landing Page Google Analytics SEO Report shows you which content or pages people are viewing first when they open your website, whereas the Exit Rate tells you which content isn’t engaging the audience. 
     In this way, you can change or improve that content to make it impressive.   </p>
 
 </div>
