nav and meta viewport changes

--- a/project3/index.html
+++ b/project3/index.html
@@ -5,6 +5,8 @@
 <head>
 
 <link rel="stylesheet" href="css/stylesheet.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
 
 
 </head>
@@ -15,8 +17,8 @@
     <nav>
 
         <ul>
-            <li class="overwhite">Home</li>
-            <li class="overwhite"></li>
+            <li class="overwhite"> <a href="index.html"> Home </a></li>
+            <li class="overwhite"> <a href="preprocessing.html">Preprocessing </a> </li>
             
         </ul>
     </nav>
