list style changes

--- a/project3/index.html
+++ b/project3/index.html
@@ -17,7 +17,7 @@
     <nav>
 
         <ul>
-            <li class="overwhite"> <a href="index.html"> Home </a></li>
+            <li class="overwhite"> <a:active href="index.html"> Home </a></li>
             <li class="overwhite"> <a href="preprocessing.html">Preprocessing </a> </li>
             
         </ul>
