--- a/project3/preprocessing.html
+++ b/project3/preprocessing.html
@@ -18,7 +18,7 @@
 
         <ul>
             <li class="overwhite"> <a href="index.html"> Home </a></li>
-            <li class="overwhite"> <a href="preprocessing.html">Preprocessing </a> </li>
+            <li class="overwhite"> <a:active href="preprocessing.html">Preprocessing </a> </li>
             
         </ul>
     </nav>
