--- a/project3/index.html
+++ b/project3/index.html
@@ -17,6 +17,7 @@
     <nav>
 
         <ul>
+        
             <li class="overwhite"> <a:active href="index.html"> Home </a></li>
             <li class="overwhite"> <a href="preprocessing.html">Preprocessing </a> </li>
             
@@ -32,7 +33,7 @@
 
     <div class="wrapper">
 
-
+<h1>Project 3 - Home </h1>
    
 
 <section>
