--- a/project3/preprocessing.html
+++ b/project3/preprocessing.html
@@ -36,6 +36,8 @@
 
     <div class="wrapper">
 
+        <h1> Project 3 - Preprocessing</h1>
+
     <section>
 
         <h2> Explain the ways to implement preprocessing
@@ -72,7 +74,22 @@
 
 <p>
 
+    Sass is the acronym for “Syntactically Awesome Style Sheets”. Sass is not only the most popular CSS Preprocessor in the world but also one of the oldest, launched in 2006 by Hampton Catlin and later developed by Natalie Weizenbaum.
+
+Although Sass is written in Ruby language, a Precompiler LibSass allows Sass to be parsed in other languages and decouple it from Ruby. Sass has a massive active community and extensive learning resources available on the net for beginners. Thanks to its maturity, stability and powerful logical prowess, Sass has established itself to the forefront of CSS Preprocessor ahead of its rival peers.
+
+Sass can be written in 2 syntaxes either using Sass or SCSS.
+
 </p>
+
+<ul>
+
+    <li> SCSS stands for Sassy CSS. Unlike Sass, SCSS is not based on indentation</li>
+    <li>.sass extension is used as original syntax for Sass, while SCSS offers a newer syntax with .scss extension.</li>
+    <li>Unlike Sass, SCSS has curly braces and semicolons, just like CSS. </li>
+    <li> Contrary to SCSS, Sass is difficult to read as it is quite deviant from CSS. Which is why SCSS it the more recommended Sass syntax as it is easier to read and closely resembles Native CSS while at the same time enjoying with power of Sass.</li>
+
+</ul>
 
     </section>
 
@@ -85,6 +102,8 @@
 
 <footer>
 
+
+    <p> Designed by Amol Mehta</p>
 
 
 </footer>
