--- a/project4/project4.html
+++ b/project4/project4.html
@@ -4,15 +4,158 @@
 
 <head>
 
+    <title>Romas Bakery</title>
+
+    <link rel="stylesheet" href="css/stylesheet.css">
+
 </head>
 
 <header>
 
 
+    <h1>Romas Bakery</h1>
+
+    <nav>
+
+        <ul>
+
+            <li class="onred">HOME</li>
+            <li class="onred">STORE</li>
+            <li class="onred">ABOUT US</li>
+            <li class="onred">FAQ</li>
+            <li class="onred">GALLERY</li>
+
+        </ul>
+
+
+    </nav>
+
+
 </header>
 
 <body>
-    
+
+    <div class="wrapper">
+
+        <h2>Most Popular </h2>
+
+
+
+        <section class="grid-container">
+
+            <div class="grid-item">
+
+                <div class="item-picture"> <img src="images/cake.jpg" alt=""></div>
+                <div class="item-desc">
+
+                    <h4>12in Cake</h4>
+                    <p> 12 inch Cake : comes in chocolate , strawberry,
+                        and vanilla
+                        with options for personal decorations.
+
+                    </p>
+
+                </div>
+
+            </div>
+
+            <div class="grid-item">
+
+                <div class="item-picture"> <img src="images/cake.jpg" alt=""></div>
+                <div class="item-desc">
+
+                    <h4>12in Cake</h4>
+                    <p> 12 inch Cake : comes in chocolate , strawberry,
+                        and vanilla
+                        with options for personal decorations.
+
+                    </p>
+
+                </div>
+
+            </div>
+            <div class="grid-item">
+
+                <div class="item-picture"> <img src="images/cake.jpg" alt=""></div>
+                <div class="item-desc">
+
+                    <h4>12in Cake</h4>
+                    <p> 12 inch Cake : comes in chocolate , strawberry,
+                        and vanilla
+                        with options for personal decorations.
+
+                    </p>
+
+                </div>
+
+            </div>
+            <div class="grid-item">
+
+                <div class="item-picture"> <img src="images/cake.jpg" alt=""></div>
+                <div class="item-desc">
+
+                    <h4>12in Cake</h4>
+                    <p> 12 inch Cake : comes in chocolate , strawberry,
+                        and vanilla
+                        with options for personal decorations.
+
+                    </p>
+
+                </div>
+
+            </div>
+            <div class="grid-item">
+
+                <div class="item-picture"> <img src="images/cake.jpg" alt=""></div>
+                <div class="item-desc">
+
+                    <h4>12in Cake</h4>
+                    <p> 12 inch Cake : comes in chocolate , strawberry,
+                        and vanilla
+                        with options for personal decorations.
+
+                    </p>
+
+                </div>
+
+            </div>
+            <div class="grid-item">
+
+                <div class="item-picture"> <img src="images/cake.jpg" alt=""></div>
+                <div class="item-desc">
+
+                    <h4>12in Cake</h4>
+                    <p> 12 inch Cake : comes in chocolate , strawberry,
+                        and vanilla
+                        with options for personal decorations.
+
+                    </p>
+
+                </div>
+
+            </div>
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+
+
 </body>
 
 <footer>
