--- a/project4/store.html
+++ b/project4/store.html
@@ -30,7 +30,7 @@
 
     <h1 class="cursive py-3">Romas Bakery</h1>
 
-    <nav class=" d-lg-inline ">
+    <nav class=" d-lg-inline  ">
 
         <ul class="custom-nav-text nav nav-pills ">
 
@@ -107,14 +107,14 @@
 
 
 
-    <div class=" container-fluid bg-light shadow-lg  my-5 mr-3 ">
+    <div class=" container-fluid bg-light  shadow-lg  my-5 mr-3 ">
 
-        <h4 class="display-4 fw-bold text-center  pt-5 "> Baked Goods</h4>
+        <h4 class="display-4 fw-bold text-center text-danger  pt-5 "> Baked Goods</h4>
 
 
-        <div class="row  g-1 py-5 px-5">
+        <div class="row  g-3 py-5 px-5">
           <div class="col d-flex justify-content-center">
-            <div class="card bg-transparent " style="width: 18rem;">
+            <div class="card bg-transparent " style="width: 20rem;">
                 <img class="card-img rounded-circle" src="images/cake.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -126,7 +126,7 @@
               </div>
           </div>
           <div class="col d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 20rem;">
                 <img class=" card-img rounded-circle" src="images/cake.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -139,7 +139,7 @@
           </div>
 
           <div class="col d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 20rem;">
                 <img class=" card-img rounded-circle" src="images/cake.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -152,7 +152,7 @@
           </div>
 
           <div class="col d-flex justify-content-center">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 20rem;">
                 <img class=" card-img rounded-circle" src="images/cake.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
@@ -165,9 +165,9 @@
           </div>
         
         </div>
-<div class="d-flex justify-content-center px-5 pb-5">
-        <button type="button" class="btn btn-outline-primary">Primary</button>
-<button type="button" class="btn btn-outline-secondary">Secondary</button>
+<div class="d-flex justify-content-center bg-danger  p-5 ">
+        <button type="button" class="btn btn-light mx-2">Primary</button>
+<button type="button" class="btn btn-outline-light mx-2">Secondary</button>
 
 </div>
       </div>
@@ -306,9 +306,9 @@
 
       </div>
 
-      <footer>
+      <footer class="container-fluid mt-3 p-2">
 
-        designed by amol mehta
+       <p class="lead text-light cursive mt-3"> Designed by Amol Mehta</p>
       </footer>
 
 
