--- a/project4/gallery.html
+++ b/project4/gallery.html
@@ -28,19 +28,19 @@
 
 <header class="container-fluid shadow-lg bg-light p-2">
 
-    <h1 class="cursive py-3">Romas Bakery</h1>
+    <h1 class="cursive py-3">Roma's Bakery</h1>
 
     <nav class=" d-lg-inline  ">
 
         <ul class="custom-nav-text nav nav-pills ">
 
-            <li class="text-light  nav-link ">HOME</li>
-            <li class="text-light nav-link ">STORE</li>
-            <li class="text-light nav-link">ABOUT US</li>
-            <li class="text-light nav-link">FAQ</li>
-            <li class="text-light nav-link">GALLERY</li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="project4.html"> HOME</a></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="store.html"> STORE</a></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="aboutus.html"> ABOUT US</a></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="faq.html"> FAQ</a></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="gallery.html"> GALLERY</a></li>
             
-            <li class="text-light nav-link"> <img src="images/shopping_cart_white_36dp.svg" alt=""></li>
+            <li class="text-light nav-link">  <a class="cursive-nav"href="cart.html"> <img src="images/shopping_cart_white_36dp.svg" alt=""></a></li>
 
         </ul>
 
