--- a/project4/project4.html
+++ b/project4/project4.html
@@ -10,27 +10,31 @@
 
 </head>
 
-<header>
 
+<header class="container-fluid shadow-lg bg-light p-2">
 
-    <h1>Romas Bakery</h1>
+    <h1 class="cursive py-3">Roma's Bakery</h1>
 
-    <nav>
+    <nav class=" d-lg-inline  ">
 
-        <ul>
+        <ul class="custom-nav-text nav nav-pills ">
 
-            <li class="onred">HOME</li>
-            <li class="onred">STORE</li>
-            <li class="onred">ABOUT US</li>
-            <li class="onred">FAQ</li>
-            <li class="onred">GALLERY</li>
-            <li class="onred"> <img src="" alt=""></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="project4.html"> HOME</a></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="store.html"> STORE</a></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="aboutus.html"> ABOUT US</a></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="faq.html"> FAQ</a></li>
+            <li class="text-light  nav-link "> <a class="cursive-nav" href="gallery.html"> GALLERY</a></li>
+            
+            <li class="text-light nav-link">  <a class="cursive-nav"href="cart.html"> <img src="images/shopping_cart_white_36dp.svg" alt=""></a></li>
 
         </ul>
 
 
     </nav>
 
+
+
+</header>
 
 </header>
 
